--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -35,6 +36,19 @@ android {
 }
 
 dependencies {
+    // Add stuff for the Room DB
+    def room_version = '2.4.2'
+    def activity_version = '1.4.0'
+
+    // Room and lifecycle dependencies
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+
+    // kotlin extensions for coroutine support with room
+    implementation("androidx.room:room-ktx:$room_version")
+
+    // kotlin extensions for coroutine support with activities
+    implementation "androidx.activity:activity-ktx:$activity_version"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
